--- a/src/notebook/2. MODEL TRAINING.ipynb
+++ b/src/notebook/2. MODEL TRAINING.ipynb
@@ -20,22 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b080dfb2",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'warning'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 17\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcatboost\u001b[39;00m \u001b[39mimport\u001b[39;00m CatBoostRegressor\n\u001b[0;32m     16\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mxgboost\u001b[39;00m \u001b[39mimport\u001b[39;00m XGBRegressor\n\u001b[1;32m---> 17\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mwarning\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'warning'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Basic Import\n",
     "import numpy as np\n",
@@ -53,7 +41,8 @@
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from catboost import CatBoostRegressor\n",
     "from xgboost import XGBRegressor\n",
-    "import warning"
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -66,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
@@ -84,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e7e412a2",
    "metadata": {},
    "outputs": [
@@ -195,7 +184,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "56d72fde",
    "metadata": {},
    "outputs": [],
@@ -224,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "cd613177",
    "metadata": {},
    "outputs": [
@@ -329,7 +318,7 @@
        "4                    none             78             75  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "f237ea14",
    "metadata": {},
    "outputs": [
@@ -376,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "924b7f9d",
    "metadata": {},
    "outputs": [],
@@ -386,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "ffc69816",
    "metadata": {},
    "outputs": [
@@ -407,7 +396,7 @@
        "Name: math_score, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
@@ -443,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "9c68f99a",
    "metadata": {},
    "outputs": [],
@@ -453,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "72459f1d",
    "metadata": {},
    "outputs": [
@@ -463,7 +452,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
@@ -484,7 +473,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "8c247bd0",
    "metadata": {},
    "outputs": [],
@@ -521,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "79ccb8e7",
    "metadata": {
     "scrolled": false
@@ -590,22 +579,22 @@
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 7.9869\n",
-      "- Mean Absolute Error: 6.1700\n",
-      "- R2 Score: 0.7379\n",
+      "- Root Mean Squared Error: 8.2341\n",
+      "- Mean Absolute Error: 6.5300\n",
+      "- R2 Score: 0.7214\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.2937\n",
-      "- Mean Absolute Error: 1.8196\n",
-      "- R2 Score: 0.9767\n",
+      "- Root Mean Squared Error: 2.2666\n",
+      "- Mean Absolute Error: 1.8012\n",
+      "- R2 Score: 0.9772\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.9679\n",
-      "- Mean Absolute Error: 4.6148\n",
-      "- R2 Score: 0.8536\n",
+      "- Root Mean Squared Error: 5.9882\n",
+      "- Mean Absolute Error: 4.6390\n",
+      "- R2 Score: 0.8526\n",
       "===================================\n",
       "\n",
       "\n",
@@ -637,14 +626,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.8564\n",
-      "- Mean Absolute Error: 4.7880\n",
-      "- R2 Score: 0.8479\n",
+      "- Root Mean Squared Error: 5.8036\n",
+      "- Mean Absolute Error: 4.7539\n",
+      "- R2 Score: 0.8506\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.9094\n",
-      "- Mean Absolute Error: 4.5759\n",
-      "- R2 Score: 0.8565\n",
+      "- Root Mean Squared Error: 6.0454\n",
+      "- Mean Absolute Error: 4.6883\n",
+      "- R2 Score: 0.8498\n",
       "===================================\n",
       "\n",
       "\n"
@@ -710,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "e0159e5f",
    "metadata": {},
    "outputs": [
@@ -751,19 +740,19 @@
        "      <td>0.880433</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.856492</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.853635</td>\n",
+       "      <td>0.852639</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>CatBoosting Regressor</td>\n",
        "      <td>0.851632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>AdaBoost Regressor</td>\n",
+       "      <td>0.849810</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -783,7 +772,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.737855</td>\n",
+       "      <td>0.721376</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -793,16 +782,16 @@
        "                Model Name  R2_Score\n",
        "2                    Ridge  0.880593\n",
        "0        Linear Regression  0.880433\n",
-       "8       AdaBoost Regressor  0.856492\n",
-       "5  Random Forest Regressor  0.853635\n",
+       "5  Random Forest Regressor  0.852639\n",
        "7    CatBoosting Regressor  0.851632\n",
+       "8       AdaBoost Regressor  0.849810\n",
        "1                    Lasso  0.825320\n",
        "6             XGBRegressor  0.821589\n",
        "3    K-Neighbors Regressor  0.784030\n",
-       "4            Decision Tree  0.737855"
+       "4            Decision Tree  0.721376"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "9a6ad559",
    "metadata": {},
    "outputs": [
@@ -851,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "eb557b0a",
    "metadata": {},
    "outputs": [
@@ -874,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "1e707ec3",
    "metadata": {},
    "outputs": [
@@ -903,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "7c9a8b48",
    "metadata": {},
    "outputs": [
@@ -1022,7 +1011,7 @@
        "[200 rows x 3 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "3acf1fbc",
    "metadata": {},
    "outputs": [
@@ -1044,7 +1033,7 @@
        "'Doing Science...'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66fb08af",
+   "id": "5a309643",
    "metadata": {},
    "outputs": [],
    "source": []
